--- a/src/footer.html
+++ b/src/footer.html
@@ -1,8 +1,136 @@
 <div class="footer">
-	<div class="footer-top">值得信赖</div>
-	<div class="footer-top1">服务保障</div>
-	<div class="footer-center">我为自己代言</div>
-	<div class="footer-bot">关于聚美</div>
-	<div class="footer-bottom"></div>
+	<div class="footer-top">
+		<div>
+			<a href="#" class="wd1">
+				<span class="pic1 pic"></span>
+				<span class="con">值得信赖美妆电商</span><br>
+				四千万用户信赖
+			</a>
+			<a href="#">
+				<span class="pic pic2"></span>
+				<span class="con">成功在美上市</span><br>
+				股票代码NYSE：JMEI
+			</a>
+			<a href="#" class="wd3">
+				<span class="pic pic3"></span>
+				<span class="con">品牌防伪码</span><br>
+				支持品牌官方验真
+			</a>
+			<a href="#" class="wd4">	
+				<span class="pic pic4"></span>
+				<span class="con">30天无理由退货</span><br>
+				只要不满意无理由退货
+			</a>
+			<a href="#">		
+				<span class="pic pic5"></span>
+				<span class="con">百万用户口碑</span><br>
+				帮你只选对的，不选贵的
+			</a>
+			<a href="#" class="wd6">		
+				<span class="pic pic6"></span>
+				<span class="con">订单闪电发货</span><br>
+				1.5小时订单急速出库
+			</a>
+			<a href="#" class="wd7">
+				<span class="pic pic7"></span>
+				<span class="con">打牌明星热荐</span><br>
+				打造精致明星脸
+			</a>
+		</div>
+	</div>
+
+	<div class="footer-top1">
+		<div class="bot">
+			<ul class="ul_1">
+				<li class="first">服务保障</li>
+				<li><a href="#">品牌真品防伪码</a></li>
+				<li><a href="#">正品保证</a></li>
+				<li><a href="#">30天无条件退货</a></li>
+				<li><a href="#">专属客服服务</a></li>
+				<li class="ceo"><a href="#">总裁邮箱ceo@jumei.com</a></li>
+			</ul>
+			<ul class="ul_2">
+				<li class="first">使用帮助</li>
+				<li><a href="#">新手指南</a></li>
+				<li><a href="#">常见问题</a></li>
+				<li><a href="#">帮助中心</a></li>
+				<li><a href="#">用户协议</a></li>
+				<li><a href="#">公示制度</a></li>
+			</ul>
+			<ul class="ul_3">
+				<li class="first">支付方式</li>
+				<li><a href="#">货到付款</a></li>
+				<li><a href="#">在线支付</a></li>
+				<li><a href="#">余额支付</a></li>
+				<li><a href="#">现金券支付</a></li>
+			</ul>
+			<ul class="ul_4">
+				<li class="first">配送方式</li>
+				<li><a href="#">包邮政策</a></li>
+				<li><a href="#">配送说明</a></li>
+				<li><a href="#">运费说明</a></li>
+				<li><a href="#">验货签收</a></li>
+			</ul>
+			<ul class="ul_5">
+				<li class="first">售后服务</li>
+				<li><a href="#">正品承诺</a></li>
+				<li><a href="#">售后咨询</a></li>
+				<li><a href="#">退货政策</a></li>
+				<li><a href="#">退货办理</a></li>
+			</ul>
+			<div>
+				<ul class="kehuduan">
+					<li class="first">手机聚美</li>
+					<li class="pic"></li>
+					<li>下载移动客户端</li>
+				</ul>
+				<ul class="weixin">
+					<li class="first">聚美微信</li>
+					<li class="pic"></li>
+					<li>聚美官方微信</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+	<div class="footer-center"></div>
+
+	<div class="footer-bot clear">
+			<ul>
+				<li><a href="#">关于聚美优品</a></li>
+				<li><a href="#">INVESTOR RELATIONS</a></li>
+				<li><a href="#">合作招商</a></li>
+				<li><a href="#">获取更新</a></li>
+				<li><a href="#">加入聚美</a></li>
+				<li><a href="#">品牌合作专区</a></li>
+				<li><a href="#">网站联盟</a></li>
+				<li><a href="#">媒体报道</a></li>
+				<li><a href="#">商务合作</a></li>
+			</ul>
+	</div>
+
+	<div class="footer-bottom">
+		<div>
+			<p class="footer_copy">
+                    COPYRIGHT © 2010-2018 北京创锐文化传媒有限公司 JUMEI.COM 保留一切权利。
+					客服热线：400-123-8888
+					<br>
+					京公网安备 11010102001226 | 
+					<a href="#">京ICP证111033号</a>     |
+					<a href="#">食品经营许可证</a>     |
+					<a href="#">营业执照</a>       |
+					<a href="#">ICP许可证</a>       |
+					<a href="#">出版物经营许可证</a>              
+			</p>
+			<p class="footer_pic">
+				<a href="#" class="log_1"></a>
+				<a href="#" class="log_2"></a>
+				<a href="#" class="log_3"></a>
+				<a href="#" class="log_4"></a>
+				<a href="#" class="log_5"></a>
+				<a href="#" class="log_6"></a>
+			</p>
+		</div>
+	</div>
 </div>
 
