--- a/src/header.html
+++ b/src/header.html
@@ -2,49 +2,57 @@
 <div class="top">
 	<div class="header_top">
 		<!-- 头部上面 -->
-		<div class="h-box">
-			<ul class="h-box-left">
+		<div class="h-box clearfix">
+			<ul class="h-box-left clearfix">
 				<li>欢迎来到聚美！</li>
-				<li><a href="https://passport.jumei.com/i/account/login">请登录</a></li>
-				<li><a href="https://passport.jumei.com/i/account/signup">快速注册</a></li>
+				<li><a href="http://10.31.162.25/jumeiyoupin/src/login.html">请登录</a></li>
+				<li><a href="http://10.31.162.25/jumeiyoupin/src/registor.html">快速注册</a></li>
+			</ul>
+			<ul class="after-left clearfix" style="display:none">
+				<li class="dl_jumei">欢迎您！
+					<a href="http://10.31.162.25/jumeiyoupin/src/login.html" class="sp"></a>
+					[
+					<a href="http://10.31.162.25/jumeiyoupin/src/index.html" class="tuichu">退出</a>
+					]
+				</li>
 			</ul>
 			<ul class="h-box-right">
 				<li><a href="http://hd.jumei.com/act/4-478-2232-guarantee.html">正品保证</a></li>
 				<li><a href="#">订单查询</a></li>
 				<li><a href="#" class="a1">
-					<span class="xin"></span>
-					收藏的品牌
-				</a></li>
+						<span class="xin"></span>
+						收藏的品牌
+					</a></li>
 				<li class="myjumei">
 					<a href="#">
-					我的聚美
-					<span class="jiantou"></span>
+						我的聚美
+						<span class="jiantou"></span>
 					</a>
-					<i class="kb"></i>
+
 					<div class="sub_nav">
-						<!-- <ul>
+						<ul>
 							<li><a href="#">我的订单</a></li>
 							<li><a href="#">我的现金券</a></li>
 							<li><a href="#">我的红包</a></li>
 							<li><a href="#">我的余额</a></li>
 							<li><a href="#">我的提现退款</a></li>
 							<li><a href="#">我的收藏</a></li>
-							<li><a href="#"></a>我的心愿单</li>
-							<li><a href="#"></a>会员中心</li>
+							<li><a href="#">我的心愿单</a></li>
+							<li><a href="#">会员中心</a></li>
 							<li><a href="#">礼品卡兑换</a></li>
-						</ul> -->
+						</ul>
 					</div>
 				</li>
 				<li class="mobile_jumei"><a href="http://hd.jumei.com/act/9-478-1477-download_app.html">
-					<span class="line"></span>
-					<s class="mobile"></s>
-					手机聚美
-					<span class="line-1"></span>
-				</a></li>
+						<span class="line"></span>
+						<s class="mobile"></s>
+						手机聚美
+						<span class="line-1"></span>
+					</a></li>
 				<li class="more">
 					<a href="#">
 						更多
-					<span class="jiantou"></span>
+						<span class="jiantou"></span>
 					</a>
 				</li>
 			</ul>
@@ -52,69 +60,72 @@
 	</div>
 
 	<!-- 头部中间 -->
-	<div class="header_center clear">
-		<!-- 左边 -->
-		<h1 class="logo">
-			<a href="#" title="聚美优品"></a>
-		</h1>
-		<!-- 中间搜索框 -->
-		<div class="search_box">
-			<form action="http://search.jumei.com">
-				<input type="text" class="search_input">
-				<button type="submit" class="search_btn">搜索</button>
-			</form>	
-		    <ul class="search_ul clear">
-		    	<li>
-		    		<a href="#">保湿</a>
-		    		<span class="line"></span>
-		    	</li>
-		    	<li>
-		    		<a href="#">面膜</a>
-		    		<span class="line"></span>
-		    	</li>
-		    	<li>
-		    		<a href="#">洗面奶</a>
-		    		<span class="line"></span>
-		    	</li>
-		    	<li>
-		    		<a href="#">补水</a>
-		    		<span class="line"></span>
-		    	</li>
-		    	<li>
-		    		<a href="#">香水</a>
-		    		<span class="line"></span>
-		    	</li>
-		    	<li>
-		    		<a href="#">眼霜</a>
-		    		<span class="line"></span>
-		    	</li>
-		    	<li>
-		    		<a href="#">口红</a>
-		    		<span class="line"></span>
-		    	</li>
-		    	<li>
-		    		<a href="#">护肤套装</a>
-		    		<span class="line"></span>
-		    	</li>
-		    	<li>
-		    		<a href="#">BB霜</a>
-		    		<span class="line line-none"></span>
-		    	</li>
-		    </ul>
-		</div>
-		<!-- 右边购物车 -->
-		<div class="cart_box">
-			<a>
-				<img src="http://p0.jmstatic.com/assets/cart.gif">
-				<span>去购物车结算</span>
-				<s class="jiaotou"></s>
-			</a>
+	<div class="header_c">
+		<div class="header_center clear">
+			<!-- 左边 -->
+			<h1 class="logo">
+				<a href="#" title="聚美优品"></a>
+			</h1>
+			<!-- 中间搜索框 -->
+			<div class="search_box">
+				<form action="http://search.jumei.com">
+					<input type="text" class="search_input">
+					<button type="submit" class="search_btn">搜索</button>
+				</form>
+				<ul class="search_ul clear">
+					<li>
+						<a href="#">保湿</a>
+						<span class="line"></span>
+					</li>
+					<li>
+						<a href="#">面膜</a>
+						<span class="line"></span>
+					</li>
+					<li>
+						<a href="#">洗面奶</a>
+						<span class="line"></span>
+					</li>
+					<li>
+						<a href="#">补水</a>
+						<span class="line"></span>
+					</li>
+					<li>
+						<a href="#">香水</a>
+						<span class="line"></span>
+					</li>
+					<li>
+						<a href="#">眼霜</a>
+						<span class="line"></span>
+					</li>
+					<li>
+						<a href="#">口红</a>
+						<span class="line"></span>
+					</li>
+					<li>
+						<a href="#">护肤套装</a>
+						<span class="line"></span>
+					</li>
+					<li>
+						<a href="#">BB霜</a>
+						<span class="line line-none"></span>
+					</li>
+				</ul>
+			</div>
+			<!-- 右边购物车 -->
+			<div class="cart_box">
+				<a>
+					<img src="http://p0.jmstatic.com/assets/cart.gif">
+					<span>去购物车结算</span>
+					<s class="jiaotou"></s>
+				</a>
+			</div>
 		</div>
 	</div>
+
 	<!-- 头部下面导航 -->
 	<div class="header_bottom">
 		<div class="nav clear">
-			<ul class="nav_list clear">
+			<ul class="nav_list">
 				<li class="shouye">
 					<a href="http://www.jumei.com">
 						首页
@@ -152,12 +163,11 @@
 				</li>
 			</ul>
 
-			<!-- <ul class="tu clear">
+			<ul class="tu">
 				<li><a href="#"><span class="zhen"></span></a></li>
 				<li><a href="#"><span class="tuihuan"></span></a></li>
 				<li><a href="#"><span class="by"></span></a></li>
-			</ul> -->
-			<!-- <div class="clear"></div> -->
+			</ul>
 		</div>
 	</div>
 </div>
