--- a/src/index.html
+++ b/src/index.html
@@ -1,43 +1,36 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="description" content="聚美优品是国内知名正品女性团购网站,也是领先的品牌化妆品团购和护肤品团购网,聚美优品团购化妆品每天有超值的化妆品和护肤品团购信息,详情登陆聚美优品官网：jumei.com。"/>
-		<meta name="keywords" content="聚美优品,化妆品团购,今日团购,化妆品防伪,化妆品验真,真品联盟"/>
-		<title>聚美优品 - 【极速免税店 品牌防伪码】正品化妆品团购网站BJ,千万用户推荐,拆封30天无条件退货!</title>
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/index.css">
-		<link rel="stylesheet" href="css/other.css">
-		<style type="text/css">
-			.main_box_1,
-			.live,
-			.lovegoods {
-				width: 1190px;
-				margin: 0 auto;
-			}
 
+<head>
+	<meta charset="UTF-8">
+	<meta name="description" content="聚美优品是国内知名正品女性团购网站,也是领先的品牌化妆品团购和护肤品团购网,聚美优品团购化妆品每天有超值的化妆品和护肤品团购信息,详情登陆聚美优品官网：jumei.com。" />
+	<meta name="keywords" content="聚美优品,化妆品团购,今日团购,化妆品防伪,化妆品验真,真品联盟" />
+	<title>聚美优品 - 【极速免税店 品牌防伪码】正品化妆品团购网站BJ,千万用户推荐,拆封30天无条件退货!</title>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/other.css">
+	<style type="text/css">
+		.main_box_1,
+		.live,
+		.lovegoods {
+			width: 1190px;
+			margin: 0 auto;
+		}
 
-			/* @font-face {
-				font-family: global-iconfont;
-				src: url(fonts/font_1404888168_2057645.eot?#iefix) format("embedded-opentype"),
-					url(fonts/font_1404888168_2057645.woff) format("woff"),
-					url(fonts/font_1404888168_2057645.ttf) format("truetype"),
-					url(fonts/font_1404888168_2057645.svg#uxiconfont) format("svg")
-			} */
+		.site-nav-icon {
+			font-family: global-iconfont;
+			font-size: 100px;
+			-webkit-font-smoothing: antialiased;
+			-moz-osx-font-smoothing: grayscaleFont type;
+			color: red;
+		}
+	</style>
+</head>
 
-			.site-nav-icon {
-				font-family: global-iconfont;
-				font-size: 100px;
-				-webkit-font-smoothing: antialiased;
-				-moz-osx-font-smoothing: grayscaleFont type;
-				color:red;
-			}
-		</style>
-	</head>
-	<body>
-		
-		<span class="site-nav-icon" > </span>
-		<!-- 
+<body>
+
+	<span class="site-nav-icon"> </span>
+	<!-- 
 		
 		实现公共模块的加载
 		1.jquery--load()/$.ajax()
@@ -50,25 +43,503 @@
 		自定义字体：下载参考网站的字体  ttf,wolf,svg,eot,如果无法获取svg格式的，随便将一个字体文件修改。
 		
 	 -->
-		<!-- 导入头部-->
-		<div class="topcontent"></div>
-		<!-- 内容模块1 -->
+	<!-- 导入头部-->
+	<div class="topcontent"></div>
+	<!-- 内容模块1 -->
 
-		<!-- 轮播图 -->
-		<div class="site_body">轮播图</div>
+	<!-- 大图 -->
+	<div class="site_body">
+		<div>
+			<ul>
+				<li><a href="#"></a></li>
+			</ul>
+		</div>
+	</div>
 
-		<!-- 今日疯抢，明日预告-->
-		<div class="home_top_tab">今日疯抢</div>
+	<!-- 今日疯抢，明日预告-->
+	<div id="main">
+		<div class="home_top_tab clear">
+			<ul>
+				<li class="current">今日疯抢</li>
+				<li>明日预告</li>
+			</ul>
+			<div class="wrapper">
+				<div class="wrapper_first">
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/006/6778_std/5bab20213fafb_535_212.jpg?1537941564">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/006/6672_std/5bbaf847df19e_535_212.jpg?1538980351">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/007/7069_std/5bbafef2aec88_535_212.jpg?1538983285">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/006/6963_std/5bbaf52600192_535_212.jpg?1538979432">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/006/6574_std/5bbafa7b39fc1_535_212.jpg?1538980908">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/006/6845_std/5bbabd7b6e8d9_535_212.jpg?1538980222">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/000/63_std/5ba9dc567c5b6_535_212.jpg?1539069797">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/002/2031_std/5bbaf28412ee9_535_212.jpg?1539048411">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/004/4033_std/5bb0432693f54_535_212.jpg?1538294532">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/005/5147_std/5bbc56f12c802_535_212.jpg?1539079953">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/000/397_std/5bade0cb87628_535_212.jpg?1538127302">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/001/1819_std/5baa01b2419e1_535_212.jpg?1537868222">
+					</a>
+				</div>
+				<div class="wrapper_second">
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/006/6778_std/5bad98e5a84e6_535_212.jpg?1538103818">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/006/6778_std/5bad98e5a84e6_535_212.jpg?1538103818">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/006/6778_std/5bad98e5a84e6_535_212.jpg?1538103818">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/006/6778_std/5bad98e5a84e6_535_212.jpg?1538103818">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/006/6778_std/5bad98e5a84e6_535_212.jpg?1538103818">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/006/6778_std/5bad98e5a84e6_535_212.jpg?1538103818">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/006/6778_std/5bad98e5a84e6_535_212.jpg?1538103818">
+					</a>
+					<a href="">
+						<img src="http://p0.jmstatic.com//jmstore/image/000/006/6778_std/5bad98e5a84e6_535_212.jpg?1538103818">
+					</a>
+
+				</div>
+			</div>
+		</div>
 
 		<!-- 每日必看 -->
-		<div class="layout_1090">每日必看</div>
-		<div class="layout_1090">今日上新单品</div>
-		<div class="layout_1090">美妆品牌团</div>
+		<div id="bikan" class="layout_1090 must_tosee louti">
+			<h2 class="day_see"></h2>
+			<div class="content">
+				<!-- Top1 -->
+				<div class="day_content">
+					<a href="#" class="link">
+						<img src="http://p0.jmstatic.com/product/004/377/4377420_std/4377420_dx_1500_400.jpg">
+						<span class="Top1"></span>
+					</a>
+					<ul class="detalis">
+						<li class="ht"></li>
+						<li class="sx"></li>
+					</ul>
+					<a href="#" class="haiwai">
+						<span>海外直采</span>
+						<span>海外价格</span>
+						<span>闪电发货</span>
+					</a>
+					<div class="prodoct_details">
+						<div class="time_end">
+							<span class="time">
+								<span class="icon">距特卖结束</span>
+								<span class="endtimer">
+									00 <em>:</em> 23 <em>:</em> 59 <em>:</em> 59
+								</span>
+							</span>
+						</div>
+						<a href="#" class="details_title">
+							肌肤的问题因水油不平衡而引起，肌肤暗沉、毛孔变大、肌肤抵抗力变弱，闭口等！黛珂PRIME LATTE
+							软肌牛油果天然植物乳液，你的水油平衡卫士！【不黏腻，不浮油】，大油田再也不敢抢风头！大名鼎鼎的紫苏水官配CP，让水油小船不再翻！
+						</a>
+						<div class="product_price">
+							<div class="now_price">
+								<em>¥</em>578
+							</div>
+							<div class="to_cart">
+								<a href="#" class="cart">加入购物车</a>
+							</div>
+						</div>
+						<div class="mianshui">
+							<span class="ms_pic">
+								<img src="http://p0.jmstatic.com/banner/area/000/000/029_big.jpg">
+							</span>
+							<span class="ms_buy">
+								<em>0</em>
+								人已经购买
+							</span>
+						</div>
+					</div>
+				</div>
+				<!-- Top2 -->
+				<div class="day_content">
+					<a href="#" class="link">
+						<img src="http://p4.jmstatic.com/product/001/308/1308419_std/1308419_dx_1500_400.jpg">
+						<span class="Top2"></span>
+					</a>
+					<ul class="detalis">
+						<li class="ht"></li>
+						<li class="sx"></li>
+					</ul>
+					<a href="#" class="haiwai">
+						<span>海外直采</span>
+						<span>海外价格</span>
+						<span>闪电发货</span>
+					</a>
+					<div class="prodoct_details">
+						<div class="time_end">
+							<span class="time">
+								<span class="icon">距特卖结束</span>
+								<span class="endtimer">
+									00 <em>:</em> 23 <em>:</em> 59 <em>:</em> 59
+								</span>
+							</span>
+						</div>
+						<a href="#" class="details_title">
+							肌肤清洁，就是要彻底。肌肤之钥（Cle De Peau BEAUTE）奢华泡沫洁面乳(清爽型)125g，迅速产生丰盈细腻的泡沫，无微不至清洁肌理，为您带来亮采美肌。清爽型泡沫洁面乳，洁面后肌肤光滑亮采。
+						</a>
+						<div class="product_price">
+							<div class="now_price">
+								<em>¥</em>388
+							</div>
+							<div class="to_cart">
+								<a href="#" class="cart">加入购物车</a>
+							</div>
+						</div>
+						<div class="mianshui">
+							<span class="ms_pic">
+								<img src="http://p0.jmstatic.com/banner/area/000/000/029_big.jpg">
+							</span>
+							<span class="ms_buy">
+								<em>0</em>
+								人已经购买
+							</span>
+						</div>
+					</div>
+				</div>
+				<!-- Top3 -->
+				<div class="day_content">
+					<a href="#" class="link">
+						<img src="http://p3.jmstatic.com/product/002/431/2431238_std/2431238_dx_1500_400.jpg">
+						<span class="Top3"></span>
+					</a>
+					<ul class="detalis">
+						<li class="ht"></li>
+						<li class="sx"></li>
+					</ul>
+					<a href="#" class="haiwai">
+						<span>海外直采</span>
+						<span>海外价格</span>
+						<span>闪电发货</span>
+					</a>
+					<div class="prodoct_details">
+						<div class="time_end">
+							<span class="time">
+								<span class="icon">距特卖结束</span>
+								<span class="endtimer">
+									00 <em>:</em> 23 <em>:</em> 59 <em>:</em> 59
+								</span>
+							</span>
+						</div>
+						<a href="#" class="details_title">
+							众人追捧的品牌，IPSA茵芙莎流金水200ml。强化健康角质、控油抗闭口。整合6大功能，启动肌肤新生模型，后续保养源源不绝，深入肌底。改善脱皮、暗哑及肌肤粗糙等问题，让肌肤恢复如婴儿般的水凝饱满。
+						</a>
+						<div class="product_price">
+							<div class="now_price">
+								<em>¥</em>349
+							</div>
+							<div class="to_cart">
+								<a href="#" class="cart">加入购物车</a>
+							</div>
+						</div>
+						<div class="mianshui">
+							<span class="ms_pic">
+								<img src="http://p0.jmstatic.com/banner/area/000/000/029_big.jpg">
+							</span>
+							<span class="ms_buy">
+								<em>0</em>
+								人已经购买
+							</span>
+						</div>
+					</div>
+				</div>
 
+				<!-- 11个 -->
+				<div class="day_content">
+					<a href="#" class="link">
+						<img src="http://p1.jmstatic.com/product/004/074/4074166_std/4074166_dx_1500_400.jpg">
+						<span class="done"></span>
+					</a>
+					<ul class="detalis">
+						<li class="ht"></li>
+						<li class="sx"></li>
+					</ul>
+					<a href="#" class="haiwai">
+						<span>海外直采</span>
+						<span>海外价格</span>
+						<span>闪电发货</span>
+					</a>
+					<div class="prodoct_details">
+						<div class="time_end">
+							<span class="time">
+								<span class="icon">抢光于今日10时</span>
+							</span>
+						</div>
+						<a href="#" class="details_title">
+							口袋卸妆少女Q萌，出行摆脱狼狈姿态，旅行mini便携装，讨人欢心四小只
+						</a>
+						<div class="product_price">
+							<div class="now_price">
+								<em>¥</em>39.9
+							</div>
+							<div class="to_cart">
+								<a href="#" class="cart cart_done">已抢光</a>
+							</div>
+						</div>
+						<div class="mianshui">
+							<span class="ms_pic">
+								<img src="http://p0.jmstatic.com/banner/area/000/000/029_big.jpg">
+							</span>
+							<!-- <span class="ms_buy">
+								<em>0</em>
+								人已经购买
+							</span> -->
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- 今日上新单品 -->
+		<div id="shangxin" class="layout_1090 new_goods louti">
+			<div class="title">
+				<h2 class="header"></h2>
+				<p class="update">每日十点更新</p>
+			</div>
+			<div class="sx_content">
+            <ul class="update_pic"></ul>
+				<!-- <ul></ul> -->
+				<!-- 拼接 -->
+			</div>
+		</div>
+		<!-- 美妆品牌团 -->
+		<div id="meizhuang" class="layout_1090 makeup louti">
+			<div class="title">
+				<h2 class="header">
+					<a href="#" class="more">查看更多>></a>
+				</h2>
+			</div>
+			<div class="content">
+				<div class="m_left">
+					<a href="#">
+						<img src="http://p0.jmstatic.com/banner/3220/21619_258_425_001-web.jpg?1468206203">
+					</a>
+				</div>
+				<div class="m_right">
+					<ul>
+						<li>
+							<a href="#">
+								<img src="http://p0.jmstatic.com/banner/3221/198934_380_205_002-web.jpg?1538277643">
+								<div class="details">
+									<p class="title">伊蒂之屋品牌团</p>
+									<p class="subtitle">秋日物语 妆伴伊人</p>
+									<p class="reduce">
+										部分满<em>98</em>减<em>30</em>，满<em>129</em>减<em>30</em>
+									</p>
+									<p class="timer">
 
-		<!-- 导入底部-->
-		<div class="footercontent"></div>
-		<script src="script/thirdplugins/jquery.js" type="text/javascript"></script>
-		<script src="script/js/index.js" type="text/javascript"></script>
-	</body>
+										02<em>天</em>
+										11
+										<em>时</em>
+										32
+										<em>分</em>
+										36
+										<em>秒</em>
+									</p>
+								</div>
+							</a>
+						</li>
+
+						<li>
+							<a href="#">
+								<img src="http://p0.jmstatic.com/banner/3221/199130_380_205_002-web.jpg?1538289559">
+								<div class="details">
+									<p class="title">美即品牌团</p>
+									<p class="subtitle">初秋来袭 直击水润</p>
+									<p class="reduce">
+										部分满<em>199</em>减<em>100</em>不封顶
+									</p>
+									<p class="timer">
+
+										00<em>天</em>
+										11
+										<em>时</em>
+										32
+										<em>分</em>
+										36
+										<em>秒</em>
+									</p>
+								</div>
+							</a>
+						</li>
+
+						<li>
+							<a href="#">
+								<img src="http://p0.jmstatic.com/banner/3221/199126_380_205_002-web.jpg?1538289479">
+								<div class="details">
+									<p class="title">DHC品牌专场</p>
+									<p class="subtitle">美妆上新季 享清凉礼遇</p>
+									<p class="reduce">
+										满<em>88</em>增体验组
+									</p>
+									<p class="timer">
+
+										01<em>天</em>
+										11
+										<em>时</em>
+										32
+										<em>分</em>
+										36
+										<em>秒</em>
+									</p>
+								</div>
+							</a>
+						</li>
+
+						<li>
+							<a href="#">
+								<img src="http://p0.jmstatic.com/banner/3221/199124_380_205_002-web.jpg?1538289232">
+								<div class="details">
+									<p class="title">膜法世家品牌团</p>
+									<p class="subtitle">膜法世家部分满199减100</p>
+									<p class="reduce">秋日美膜法 护肤新主张</p>
+									<p class="timer">
+
+										02<em>天</em>
+										11
+										<em>时</em>
+										32
+										<em>分</em>
+										36
+										<em>秒</em>
+									</p>
+								</div>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- 左侧边栏 -->
+	<div id="leftnav" class="left_nav">
+		<div class="nav_border" id="loutinav">
+			<div class="jumei">
+				聚美<br>
+				首页
+			</div>
+			<ul class="left_list">
+				<li class="first">
+					<a href="#bikan" class="act active">
+						<span>每日必看</span>
+					</a>
+				</li>
+				<li class="second">
+					<a href="#shangxin">
+						<span>上新单品</span>
+					</a>
+				</li>
+				<li class="third">
+					<a href="#meizhuang">
+						<span>品牌团</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<!-- 右侧边栏 -->
+	<div class="right">
+		<div class="right_main">
+			<!-- 中间ul -->
+			<ul class="center">
+				<li class="l1">
+					<a href="#">
+						<s></s>
+						<!-- 登录 -->
+					</a>
+				</li>
+				<li class="l2">
+					<a href="#" class="hengxian">
+						<s></s>
+						<span class="text">购物车</span>
+						<span class="num">0</span>
+					</a>
+				</li>
+				<li class="l3">
+					<a href="#" class="lla">
+						<s></s>
+						<!-- 我的财产 -->
+					</a>
+				</li>
+				<li class="l4">
+					<a href="#" class="lla">
+						<s></s>
+						<!-- 我的心愿单 -->
+					</a>
+				</li>
+				<li class="l5">
+					<a href="#" class="lla">
+						<s></s>
+						<!-- 我的心愿单 -->
+					</a>
+				</li>
+			</ul>
+			<!-- 下面ul -->
+			<ul class="center_bot">
+				<li class="erweima">
+					<a href="#" class="goback">
+						<s></s>
+						<!-- 手机聚美 -->
+					</a>
+				</li>
+				<li class="kefu">
+					<a href="#" class="goback">
+						<s></s>
+						<!-- 客服中心 -->
+					</a>
+				</li>
+				<li class="dingbu">
+					<a href="#" class="goback">
+						<s></s>
+						<!-- 返回顶部 -->
+					</a>
+					<div class="box_hid">
+						返回顶部
+						<s class="hid_s"></s>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<!-- 导入底部-->
+	<div class="footercontent"></div>
+	<script src="script/thirdplugins/jquery.js" type="text/javascript"></script>
+	<script src="script/js/index.js" type="text/javascript"></script>
+	<!-- <script src="require.js" type="text/javascript" ></script> -->
+	<!--  defer async="true" data-main="../dist/main-built.js -->
+</body>
+
 </html>
